[package]
name = "copper-rs"
version = "1.0.0"
authors = ["DevTaube"]
edition = "2021"
description = "Copper.rs is a simple library for 2D games written in Rust targeting HTML5."
readme = "README.md"
homepage = "https://github.com/devtaube/copper.rs"
repository = "https://github.com/devtaube/copper.rs"
license = "MIT"
keywords = ["gamedev", "graphics", "web", "wasm", "api"]


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
